<resources>
    <string name="about">About</string>
    <string name="accessibility_level">Accessibility Level</string>
    <string name="accessibility_settings">Accessibility</string>
    <string name="accidental_touches">Accidental Touch Guard</string>
    <string name="accidental_touches_settings_subtext">The guard blocks your phone from touch input when the phone is
        covered\nif you have problems with it you can turn it off
    </string>
    <string name="accidental_touches_subtext">Accidental touch was detected\npress OK to continue using the phone\nif
        this message keeps appearing you can disable it in the accessibility settings
    </string>
    <string name="acknowledgments">Acknowledgments</string>
    <string name="adaptive">Adaptive</string>
    <string name="add_alarm">Add Alarm</string>
    <string name="add_alarm_quickly">Add Timer</string>
    <string name="add_contact">Add Contact</string>
    <string name="add_emergency_contact">Add</string>
    <string name="add_pill">Add Pill</string>
    <string name="add_shortcut">Add Shortcut</string>
    <string name="add_to_favorite">Add to Favorite</string>
    <string name="add_to_home">Add to Home</string>
    <string name="add_to_sos">Add to SOS</string>
    <string name="address">Address</string>
    <string name="advanced_options">Advanced Options</string>
    <string name="afternoon">Afternoon</string>
    <string name="airplane_mode">Airplane Mode</string>
    <string name="alarm_name">Alarm Name</string>
    <string name="alarm_volume">Alarm Volume</string>
    <string name="alarm_volume_subtext">Choose Volume for Alarms.\nVolume increases from left to right.</string>
    <string name="alarms">Alarms</string>
    <string name="alarms_repeats_every">Alarm repeats every</string>
    <string name="all_alarms">All Alarms</string>
    <string name="allow">Allow</string>
    <string name="already_setted">Already Set!\nClick here to change to it</string>
    <string name="an_error_has_occurred">An error has occurred!</string>
    <string name="and_welcome_to_blankLaunch">and welcome to blankLaunch</string>
    <string name="apps">Apps</string>
    <string name="are_you_sure_you_want_to_delete___">Are you sure you want to delete %s?</string>
    <string name="assistant">Assistant</string>
    <string name="at_least_one_day_must_be_selected">At least one day must be selected!</string>
    <string name="auto_brightness">Auto\nBrightness</string>
    <string name="backspace">backspace</string>
    <string name="blankLaunch_bla_allow_permission">Please allow the following permissions:</string>
    <string name="blocked">Blocked</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="brightness">Brightness</string>
    <string name="brightness_subtext">Change Brightness.</string>
    <string name="cache_cleared_successfully">Cache Cleared Successfully!</string>
    <string name="call">Call</string>
    <string name="calling">Calling</string>
    <string name="call_log">Call Log:</string>
    <string name="call_subtext">This permission is required in order to call contacts.</string>
    <string name="camera">Camera</string>
    <string name="camera_subtext">This permission is required in order to turn on the flashlight.</string>
    <string name="cancel">Cancel</string>
    <string name="change_pills_time">Change Pills Time</string>
    <string name="change_system_settings_subtext">Please allow blankLaunch to change settings, such as increasing the font
        size and changing the brightness.
    </string>
    <string name="choose_friday">Fri</string>
    <string name="choose_monday">Mon</string>
    <string name="choose_saturday">Sat</string>
    <string name="choose_sunday">Sun</string>
    <string name="choose_thursday">Thu</string>
    <string name="choose_tuesday">Tue</string>
    <string name="choose_wednesday">Wed</string>
    <string name="clear">Clear</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="clear_data">Clear All Data</string>
    <string name="clear_data_subtext">Are you sure you want to delete all user data? The blankLaunch app will revert in a fresh-new state, as if it were just installed.</string>
    <string name="clear_data_subtext2">100%?</string>
    <string name="clear_data_subtext3">sure?\npressing yes will delete all data!</string>
    <string name="clock">Clock</string>
    <string name="coming_soon">Coming Soon!</string>
    <string name="connection_settings">Connection</string>
    <string name="contact_must_has_name">Contact must have a Name!</string>
    <string name="contact_not_created">Contact not created!</string>
    <string name="contacts">Contacts</string>
    <string name="contacts_read_subtext">This permission is required in order to read contacts.</string>
    <string name="contacts_subtext">This permission is required in order to add new contacts.</string>
    <string name="crash">Oops!\nblankLaunch ran into a problem and will now restart.</string>
    <string name="current_time">Current Time</string>
    <string name="custom">Custom</string>
    <string name="dark">Dark</string>
    <string name="delete">Delete</string>
    <string name="delete___">Delete %s?</string>
    <string name="delete_all_alarms">Delete all alarms</string>
    <string name="dialer">Dialer</string>
    <string name="display_settings">Display</string>
    <string name="done">Done</string>
    <string name="down">Down</string>
    <string name="edit">Edit</string>
    <string name="email">Email:</string>
    <string name="enable_notification_access">Enable Notification Access</string>
    <string name="enable_notification_access_subtext">Please give blankLaunch access to notifications.</string>
    <string name="enter">Enter</string>
    <string name="enter_contact_or_phone_number">Enter contact name:</string>
    <string name="evening">Evening</string>
    <string name="example_of_different_text_sizes">Example of different text sizes\nShould be readable and not
        overflow.
    </string>
    <string name="external_storage_subtext">This permission is required in order to save pictures.</string>
    <string name="feedback">Send Feedback</string>
    <string name="feedback_cannot_be_empty">Feedback cannot be empty!</string>
    <string name="feedback_sent_successfully">Feedback sent successfully!</string>
    <string name="first_please_select_how_you_want_to_interact_with_buttons">Please select the level of accessibility
    </string>
    <string name="font_size">Font Size</string>
    <string name="friday">Friday</string>
    <string name="have_hard_time_using_the_phone_s_keyboard_use_blankLaunch_s_big_keyboard_instead">Having a hard time using
        the phone\'s keyboard? use blankLaunch\'s BIG keyboard instead!
    </string>
    <string name="hello">Hello</string>
    <string name="help">Video</string>
    <string name="hide">Hide</string>
    <string name="high_level">High Level</string>
    <string name="home_phone_number">Home phone number</string>
    <string name="hour">Hour</string>
    <string name="huge">Huge</string>
    <string name="internet">Internet</string>
    <string name="invoked_in">Invoked in:</string>
    <string name="it_s_highly_recommended_to_use_blankLaunch_s_home_screen_as_the_default_home_launcher">One last
        thing:\nIt\'s highly recommended to use blankLaunch\'s home screen as the default home launcher
    </string>
    <string name="language">language</string>
    <string name="language_settings">Language</string>
    <string name="large">Large</string>
    <string name="left_handed">Left Handed</string>
    <string name="light">Light</string>
    <string name="location">Location</string>
    <string name="emergency_services">Emergency Services</string>
    <string name="mail">Mail</string>
    <string name="maps">Maps</string>
    <string name="medium">Medium</string>
    <string name="medium_level">Medium Level</string>
    <string name="message">Message</string>
    <string name="messages">Messages</string>
    <string name="minute">Minute</string>
    <string name="minutes">Minutes</string>
    <string name="missed">Missed</string>
    <string name="mobile_phone_number">Mobile phone number</string>
    <string name="monday">Monday</string>
    <string name="more">more</string>
    <string name="morning">Morning</string>
    <string name="name">Name</string>
    <string name="named__">named</string>
    <string name="new_alarm___was_created">new alarm %s was created!</string>
    <string name="nfc">NFC</string>
    <string name="no">No</string>
    <string name="notes">Notes</string>
    <string name="notes_settings">Notes</string>
    <string name="notes_settings_subtext">Choose if you want to have a Notes page on the home screen.</string>
    <string name="notifications">Notifications</string>
    <string name="of">of</string>
    <string name="off">Off</string>
    <string name="ok">OK</string>
    <string name="on">On</string>
    <string name="only_once">Only once</string>
    <string name="open">Open</string>
    <string name="outgoing">Outgoing</string>
    <string name="page">Page</string>
    <string name="permissions_part">Permissions</string>
    <string name="personalization_settings">Personalization</string>
    <string name="phone">Phone</string>
    <string name="photo">Photo</string>
    <string name="photos">Photos</string>
    <string name="pill_added">Pill added!</string>
    <string name="pill_name">Pill Name</string>
    <string name="pills">Pills</string>
    <string name="press_longer">Press Longer!</string>
    <string name="timer">Timer</string>
    <string name="read_call_log">Read Call History</string>
    <string name="read_call_log_subtext">This permission is required in order to view the call history.</string>
    <string name="read_contacts">Read contacts</string>
    <string name="received">Received</string>
    <string name="recent">Recent</string>
    <string name="regular_level">Regular level</string>
    <string name="remove_from_favorite">Remove from Favorite</string>
    <string name="remove_from_home">Remove from Home</string>
    <string name="remove_from_sos">Remove from SOS</string>
    <string name="remove_shortcut">Remove shortcut</string>
    <string name="removed_all_alarms">Removed all alarms!</string>
    <string name="repeats_every_day">Every day</string>
    <string name="right_handed">Right Handed</string>
    <string name="saturday">Saturday</string>
    <string name="save">Save</string>
    <string name="send">Send</string>
    <string name="set_default_dialer">Set Default Calling App</string>
    <string name="set_default_dialer_subtext">blankLaunch needs to be marked as the default calling app.</string>
    <string name="set_home_screen">Set Home Screen</string>
    <string name="set_home_screen_subtext">In order to use blankLaunch, you should set it as home screen.\nIt is
        reversible and can be changed in the settings.
    </string>
    <string name="set_keyboard">Set keyboard</string>
    <string name="setting_does_not_exist">Setting Does Not Exist</string>
    <string name="settings">Settings</string>
    <string name="settings_permission">Settings Permission</string>
    <string name="share">Share</string>
    <string name="share_actual_text">Hi, I\'m using this platform named "blankLaunch" which replaces the phone\'s
        interface to a big, simple and friendly one.\nInterested?\nYou can download it for free!\ncheck out the link
        below for more information:\n\nhttps://sites.google.com/view/blankLaunch
    </string>
    <string name="share_blank_phone_subtext">Hey, know anyone who may want to know about blankLaunch?\nYou can
        share it with them!"
    </string>
    <string name="small">Small</string>
    <string name="submit">submit</string>
    <string name="choose_language_for_keyboard">Choose Language</string>
    <string name="hebrew">Hebrew</string>
    <string name="english">English</string>
</resources>