<?xml version="1.0" encoding="utf-8"?> 

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:paddingStart="10dp"
    android:paddingTop="10dp"
    android:paddingEnd="10dp">

    <com.test.norman.launcher.views.blankPictureTextButton
        android:id="@+id/favorite"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/style_for_buttons"
        app:_src="@drawable/star_on_button"
        app:_text="@string/add_to_favorite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home" />

    <com.test.norman.launcher.views.blankPictureTextButton
        android:id="@+id/home"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="5dp"
        android:background="@drawable/style_for_buttons"
        app:_src="@drawable/home_on_button"
        app:_text="@string/add_to_home"
        app:layout_constraintBottom_toTopOf="@+id/favorite"
        app:layout_constraintEnd_toStartOf="@+id/sos"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.test.norman.launcher.views.blankPictureTextButton
        android:id="@+id/sos"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/style_for_buttons"
        app:_src="@drawable/emergency"
        app:_text="@string/add_to_sos"
        app:layout_constraintBottom_toBottomOf="@+id/home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/home"
        app:layout_constraintTop_toTopOf="@+id/home" />

</androidx.constraintlayout.widget.ConstraintLayout>